lib/libremidi/tests/corpus/Invalid/No Header Chunk/everybr.mid
vti_encoding:SR|utf8-nl
vti_timelastmodified:TR|21 Nov 1999 12:09:09 -0000
vti_syncwith_www.animazione.bizland.com\:80:TR|21 Nov 1999 12:09:09 -0000
vti_author:SR|madeitaly.geo
vti_syncwith_www.animazione.net\:80:TR|21 Nov 1999 12:09:09 -0000
vti_syncwith_localhost\\c\:\\documenti\\madeitaly2/c\:/documenti/madeitaly2:TR|21 Nov 1999 12:09:09 -0000
vti_syncwith_web.tiscalinet.it\:21:TR|21 Nov 1999 12:09:10 -0000
vti_syncwith_216.121.168.82\:80:TR|21 Nov 1999 12:09:09 -0000
vti_syncofs_web.tiscalinet.it\:21:TW|06 Dec 1998 21:40:00 -0000
vti_syncwith_www.geocities.com\:80/madeitaly:TR|21 Nov 1999 12:09:09 -0000
vti_modifiedby:SR|madeitaly.geo
vti_timecreated:TR|18 Apr 2000 10:36:22 -0000
vti_backlinkinfo:VX|Vacanza_sportiva/Informazioni2.htm
vti_extenderversion:SR|4.0.2.3712
vti_syncwith_localhost\\c\:\\webshare\\wwwroot\\madeitaly/c\:/webshare/wwwroot/madeitaly:TR|21 Nov 1999 12:09:09 -0000
